packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__variable_assignment__            let x  = (-1);            x *= (1 * 1);            .snap
---
source: packages/llvm/src/tests/variable_declaration/variable_assignment.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x_ = alloca double, align 8
  store double -1.000000e+00, double* %x_, align 8
  %"5" = load double, double* %x_, align 8
  %"6" = fmul double %"5", 1.000000e+00
  store double %"6", double* %x_, align 8
  ret void
}

